--- a/html/dogs.html
+++ b/html/dogs.html
@@ -86,7 +86,7 @@
               Our Dogs
             </h1>
             <p class="lead mb-0 text-white">
-              <i>Meet the Moms and Dad of our beautiful red Goldendoodles.</i>
+              <i>Meet the Moms and Dad of our beautiful red mini Goldendoodles and our colorful mini tri-colored Aussiedoodles.</i>
             </p>
           </div>
         </div>
@@ -95,17 +95,17 @@
     
     <section class="row no-gutters p-0 bg-white">
       <div id="Mavia" class="col-md-5 col-xl-6 d-flex flex-column order-md-2">
-        <img src="assets/img/maiva.jpg" alt="Image" class="flex-grow-1">
+        <img src="assets/img/molly.jpg" alt="Image" class="flex-grow-1">
       </div>
       <div class="col-md-7 col-xl-6 order-md-1 height-60 height-md-70">
         <div class="row w-100 no-gutters justify-content-center py-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3">
-            <h1 class="display-4 display-4">Maiva</h1>
-            <h2 class="lead">AKC English Cream Retriever</h2>
-            <p class="lead text-dark">DOB: October 8, 2017</p>
+            <h1 class="display-4 display-4">Molly</h1>
+            <h2 class="lead">F1 Aussiedoodle</h2>
+            <p class="lead text-dark">DOB: June 5, 2018</p>
             <hr>
-            <p class="lead text-justify">Maiva is our beautiful AKC English Cream Retriever. She has a very kind and patient tempermant, and her excellent mothering skills. She weighs 65 pounds and is very agile on her feet, always willing to play fetch. All of Mavia's litters have been sired by Rio. We say, "if its not broke, don't fix it." This applies to dog breeding as well. With this pairing, we get beautiful light carmel pups with a wavy coat.</p>
-            <p class="lead text-justify">Mavia has been genetically screened for any defects and is routinely checked by a licensed veternarian at West Vet in Boise, Idaho. You are welcome to ask to see the results, since we do not post this sensitive information on the Internet.</p>
+            <p class="lead text-justify">Molly, our beautiful and colorful Aussiedoodle, is such a kind-hearted female. She has never shown any aggression to other dogs or my grandchildren of all ages!  Her mothering instincts are the best.  She has had large litters and is still very capable of keeping them all clean and fed.</p>
+            <p class="lead text-justify">Her puppies will have wavy to curly coats and will come in an assortment of colors.  Mated to Rio, her puppy's adult weight will be approximately 30-35 lbs.</p>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
             <h2 class="lead">F1 Goldendoodle</h2>
             <p class="lead text-dark">DOB: October 14, 2018</p>
             <hr>
-            <p class="lead text-justify">Willow is our 36 pound mini F1 Goldendoodle. Her personality is kind and lovable, she is very obident and loves her tummy rubs. She will produce mini F1B Goodlendoodles, sired by Rio with an average adult weight of 30-35 pounds.</p>
+            <p class="lead text-justify">Willow is our 36 pound mini F1 Goldendoodle. Her personality is kind and lovable, she is very obedient and loves her tummy rubs. She will produce mini F1B Goodlendoodles, sired by Rio with an average adult weight of 30-35 pounds.</p>
             <p class="lead text-justify">Willow has been genetically screened for any defects and is routinely checked by a licensed veternarian at West Vet in Boise, Idaho. You are welcome to ask to see the results, since we do not post this sensitive information on the Internet.</p>
           </div>
         </div>
@@ -162,7 +162,7 @@
                   <h3 class="mb-1 mt-2">F1 Generations</h3>
                   <hr>
                   <p>A First Generation (F1) Goldendoodle is a Golden Retriever crossed with a Poodle (50% Poodle, 50% Golden Retriever). F1 puppies have a low to non-shedding coat. F1 Goldendoodles are usually tolerable for people with mild allergies. People that are allergic to animals are often allergic to the dander (dead skin that is continually shed). No studies have proven that any dog is 100% hypo-allergenic. We generally see more of the Retriever personality in these puppies than in the F1B puppies.</p>
-                  <p>Maiva is our purebred English Cream Retriever and when she is mated with our red Moyen stud, Rio, they produce F1 puppies. We are thrilled that Rio's red color is dominant! Their puppies will have wavy coats.</p>
+                  <p class="text-danger">We are not raising F1 puppies at this time.</p>
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
                   <h3 class="mb-1 mt-2">F1B Generations</h3>
                   <hr>
                   <p>An F1B Goldendoodle is the result of breeding an F1 Goldendoodle with a Poodle. F1B puppies are 75% Poodle and 25% Retriever, which makes this generation the most hypo-allergenic of all the Goldendoodle generations we breed. The F1B Goldendoodles have beautiful wavy to curly plush coats.</p>
-                  <p>Willow is our F1 Goldendoodle. My puppies that are the result of the mating of Willow and my red Moyen stud, Rio, are F1B Goldendoodles. They typically have soft wavy to curly coats.</p>
+                  <p>Willow is our F1 Goldendoodle and Molly is our F1 Aussiedoodle. Willow and Molly are our F1 breeding females, who are mated to my red Moyen Poodle stud, Rio.  Their offspring are F1B Goldendoodles and F1B Aussiedoodles, both of which typically have either soft wavy coats or soft curly coats.</p>
                 </div>
               </div>
             </div>
@@ -186,7 +186,7 @@
                   <h3 class="mb-1 mt-2">Hybrid Vigor</h3>
                   <hr>
                   <p>When two unrelated breeds of dogs are mated, the first generation of puppies are referred to as hybrids, thus Willow is a hybrid. Hybrid puppies have what is called hybrid vigor and have less health problems than either purebred parent.</p>
-
+                  <p>Both Willow and Molly have hybrid vigor; and therefore, will not pass any health problems onto their offspring. All three of my dogs have been health tested by EMBARK and are RISK AND CARRIER FREE of any disease mutations.</p>
                 </div>
               </div>
             </div>
