--- a/html/puppies.html
+++ b/html/puppies.html
@@ -199,10 +199,10 @@
           </div>
           <div class="col-lg-4">
               <div class="mb-2 d-lg-flex">
-                <img class="card-img flex-lg-grow-1" src="assets/img/maiva.jpg" alt="Maiva" />
+                <img class="card-img flex-lg-grow-1" src="assets/img/molly.jpg" alt="Maiva" />
               </div>
               <div class="d-lg-flex">
-                <p class="h3 text-dark">Mavia<span class="lead"> - Registered English Retriever</span></p>
+                <p class="h3 text-dark">Mavia<span class="lead"> - F1 Aussiedoodle</span></p>
               </div>
           </div>
           <div class="col-lg-4">
