--- a/html/puppies.html
+++ b/html/puppies.html
@@ -174,22 +174,22 @@
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-0">
-              <span class="h2 d-block text-dark">F1 Mini Tri-Color Aussiedoodles</span>
+              <span class="h2 d-block text-dark">F1B Mini Aussiedoodles</span>
               <ul>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Parents:</strong><span> Molly &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Birth:</strong><span> April 28, 2020</span></p>
+                  <p><strong>Est. Birth:</strong><span> March 20, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Est. Take Home:</strong><span> June 20, 2020</span></p>
+                  <p><strong>Est. Take Home:</strong><span> May 27, 2021</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 30-35 lbs.</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
-                  <p><strong>Colors:</strong><span> Tan, Light Red</span></p>
+                  <p><strong>Colors:</strong><span> Tri-Color</span></p>
                 </li>
                 <li class= "lead mb-1 text-dark">
                   <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
@@ -217,7 +217,7 @@
       </div>
 
     </section>
-
+    <!--
     <section class="bg-white" id="movie-mondays">
       <div class="container py-5">
         <div class="row justify-content-around">
@@ -361,14 +361,14 @@
         </div>
       </div>
     </section>
-    <!--
-    <section class="bg-dark2">
+    -->
+    <section class="bg-white">
       <div class="container">
         <div class="row justify-content-around py-5">
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-4">
               <span class="h2 d-block">Movie Mondays!</span>
-              <span class="h2 d-block lead"><strong>Parents:</strong> Mavia &amp; Rio</span>
+              <span class="h2 d-block lead"><strong>Parents:</strong> Molly &amp; Rio</span>
               <p class="lead mb-0">Watch our Monday Movie each week to see the puppies grow!</p>
             </div>
           </div>
@@ -387,7 +387,7 @@
       <div class="container">
         <div class="row justify-content-around">
           <div class="col-lg-4 py-2">
-            <h5>Black Boy (Mavia &amp; Rio)</h5>
+            <h5>Black Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -398,7 +398,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Brown Boy (Mavia &amp; Rio)</h5>
+            <h5>Brown Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/RcRf2zrstOI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -409,7 +409,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Green Boy (Mavia &amp; Rio)</h5>
+            <h5>Green Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -422,7 +422,7 @@
         </div>
         <div class="row justify-content-around">
           <div class="col-lg-4 py-2">
-            <h5>Red Boy (Mavia &amp; Rio)</h5>
+            <h5>Red Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/wglrExw3G-8/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -433,7 +433,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Purple Boy (Mavia &amp; Rio)</h5>
+            <h5>Purple Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/lE6v8_g3HA0/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -444,7 +444,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Yellow Girl (Mavia &amp; Rio)</h5>
+            <h5>Yellow Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/4c2mpprfZGI/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -457,7 +457,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-4 py-2">
-            <h5>Pink Girl (Mavia &amp; Rio)</h5>
+            <h5>Pink Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/ZWbmSNIT1uM/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -468,7 +468,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>White Girl (Mavia &amp; Rio)</h5>
+            <h5>White Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <img alt="Image" src="http://i.ytimg.com/vi/SBrjLIur18I/maxresdefault.jpg" class="bg-image" />
               <div class="video-play-icon" style="opacity: .5"></div>
