--- a/html/puppies.html
+++ b/html/puppies.html
@@ -433,7 +433,7 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Purple Boy (Molly &amp; Rio)</h5>
+            <h5>Purple Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="http://i.ytimg.com/vi/lE6v8_g3HA0/maxresdefault.jpg" class="bg-image" />-->
               <div class="video-play-icon" style="opacity: .5"></div>
@@ -455,7 +455,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-around">
           <div class="col-lg-4 py-2">
             <h5>Pink Girl (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
@@ -478,10 +478,69 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 py-2">
+            <h5>Light Blue Boy (Molly &amp; Rio)</h5>
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/SBrjLIur18I/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon" style="opacity: .5"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Koul3gINxAty9m_wToBWTweP&amp;rel=0;autoplay=1&amp;controls=0"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="row justify-content-around">
+          <div class="col-lg-4 py-2">
+            <h5>Light Purple Girl (Molly &amp; Rio)</h5>
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon" style="opacity: .5"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouWqSEWCp8CLL0esDLsMoyC&amp;rel=0;autoplay=1&amp;controls=0"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 py-2">
+            <h5>Orange Girl (Molly &amp; Rio)</h5>
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/RcRf2zrstOI/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon" style="opacity: .5"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KotrnpbZ22nVBOpFjmrsUmaW&amp;rel=0;autoplay=1&amp;controls=0"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 py-2">
+            <h5>Green Boy (Molly &amp; Rio)</h5>
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon" style="opacity: .5"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+              </div>
+            </div>
+          </div>
+        </div> 
+        <div class="row justify-content-around">
+          <div class="col-lg-4 py-2">
+            <h5>Blue Boy (Molly &amp; Rio)</h5>
+            <div class="video-cover rounded">
+              <!--<img alt="Image" src="http://i.ytimg.com/vi/KEMXy2nyuEQ/maxresdefault.jpg" class="bg-image" />-->
+              <div class="video-play-icon" style="opacity: .5"></div>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kott7JjtVsMXu6uWCFLgWcRZ&amp;rel=0;autoplay=1&amp;controls=0"
+                allowfullscreen allow="autoplay; encrypted-media"></iframe>
+              </div>
+            </div>
+          </div>
+        </div> 
       </div>
     </section>
-    -->
+    
     <section class="bg-gray">
       <div class="container">
         <div class="row justify-content-center">
