--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
     <title>Trails &amp; Tails Doodles | Home</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Our mission is to provide Goldendoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.">
+    <meta name="description" content="Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -85,7 +85,7 @@
             <div class="col-12 col-md-8">
               <h2 class="text-white">Red Mini Goldendoodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>
-              <p class="lead text-light">Our mission is to provide Goldendoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
+              <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
             </div>
           </div>
@@ -99,7 +99,7 @@
             <div class="col-12 col-md-8">
               <h2 class="text-white">Red Mini Goldendoodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>
-              <p class="lead text-light">Our mission is to provide Goldendoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
+              <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
             </div>
           </div>
@@ -113,7 +113,7 @@
             <div class="col-12 col-md-8">
               <h2 class="text-white">Red Mini Goldendoodles by</h2>
               <h1 class="display-3 text-white">Trails &amp; Tails Doodles</h1>>
-              <p class="lead text-light">Our mission is to provide Goldendoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
+              <p class="lead text-light">Our mission is to provide Goldendoodle and Aussiedoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.</p>
               <a href="about.html" class="btn btn-primary btn-lg">Our Story</a>
             </div>
           </div>
@@ -148,7 +148,7 @@
         <div class="row no-gutters justify-content-center py-md-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3 py-md-5">
             <span class="h2 d-block">Our Puppies</span>
-            <p class="lead">We breed Goldendoodle puppies from superior quality lines. Our puppies make great family pets due to their non-shedding coats and their friendly out-going personalities.</p>
+            <p class="lead">We breed Goldendoodle and Aussiedoodle puppies from superior quality lines. Our puppies make great family pets due to their non-shedding coats and their friendly out-going personalities.</p>
             <a href="adopt.html" class="btn btn-lg btn-primary rounded">How to Adopt?</a>
           </div>
         </div>
