--- a/html/prepare.html
+++ b/html/prepare.html
@@ -78,7 +78,7 @@
     </nav>
 
     <section class="bg-dark overlay-dark">
-      <img src="assets/img/prepare-header.png" alt="Image" class="bg-image opacity-70">
+      <img src="assets/img/prepare-header.jpg" alt="Image" class="bg-image opacity-70">
       <div class="container height-lg-30">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6">
