--- a/html/puppies.html
+++ b/html/puppies.html
@@ -514,12 +514,12 @@
             </div>
           </div>
           <div class="col-lg-4 py-2">
-            <h5>Green Boy (Molly &amp; Rio)</h5>
+            <h5>Tan Boy (Molly &amp; Rio)</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="http://i.ytimg.com/vi/41RGmL4TwLc/maxresdefault.jpg" class="bg-image" />-->
               <div class="video-play-icon" style="opacity: .5"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFuXYXkN2kqGMTU2hv9Iuu&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosUyvx3hXYeXOElIY1q3hrJ&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
