--- a/html/stimulation.html
+++ b/html/stimulation.html
@@ -117,7 +117,7 @@
                   </div>
                   <div class="card-body d-flex align-items-center col-md-8 px-4">
                     <div>
-                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 - 5 seconds.</span>
+                      <span class="h4 mb-0">Holding the pup in one hand, the handler gently stimulates (tickles) the pup between the toes on any one foot using a Q-tip. It is not necessary to see that the pup is feeling the tickle. Time of stimulation 3 – 5 seconds.</span>
                     </div>
                   </div>
                 </div>
@@ -129,7 +129,7 @@
                   </div>
                   <div class="card-body d-flex align-items-center col-md-8 px-4">
                     <div>
-                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 - 5 seconds.</span>
+                      <span class="h4 mb-0">Using both hands, the pup is held perpendicular to the ground, (straight up), so that its head is directly above its tail. This is an upwards position. Time of stimulation 3 – 5 seconds.</span>
                     </div>
                   </div>
                 </div>
@@ -141,7 +141,7 @@
                   </div>
                   <div class="card-body d-flex align-items-center col-md-8 px-4">
                     <div>
-                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 - 5 seconds.</span>
+                      <span class="h4 mb-0">Holding the pup firmly with both hands the head is reversed and is pointed downward so that it is pointing towards the ground. Time of stimulation 3 – 5 seconds.</span>
                     </div>
                   </div>
                 </div>
@@ -153,7 +153,7 @@
                   </div>
                   <div class="card-body d-flex align-items-center col-md-8 px-4">
                     <div>
-                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 - 5 seconds.</span>
+                      <span class="h4 mb-0">Hold the pup so that its back is resting in the palm of both hands with its muzzle facing the ceiling. The pup while on its back is allowed to sleep. Time of stimulation 3 – 5 seconds.</span>
                     </div>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
                   </div>
                   <div class="card-body d-flex align-items-center col-md-8 px-4">
                     <div>
-                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 - 5 seconds.</span>
+                      <span class="h4 mb-0">Use a damp towel that has been cooled in a refrigerator for at least five minutes. Place the pup on the towel, feet down. Do not restrain it from moving. Time of stimulation 3 – 5 seconds.</span>
                     </div>
                   </div>
                 </div>
