--- a/html/about.html
+++ b/html/about.html
@@ -119,7 +119,7 @@
               <p class="lead text-justify">We cater to first-time puppy parents.  We also keep you up to speed on all the happenings here at our home during your puppy's development and growth. We will make suggestions and direct you to additional reading material and videos to watch. I give each of our family's a great book, "Good Owners, Great Dogs" by Brian Kilcommons and Sarah Wilson.</p>
               <hr>
               <h3>Our Location</h3>
-              <p class="lead text-justify">We are located 35 minutes west of Boise, Idaho. You are welcome to schedule a visit and/or pick your puppies up in person. We encourage our customers to fly in to get your puppy and fly back with them under the seat. We will meet you at the airport with everything you need. We also ship our puppies anywhere in the United States.</p>
+              <p class="lead text-justify">We are located 35 minutes west of Boise, Idaho. You are welcome to schedule a visit and/or pick your puppies up in person. We encourage our customers to fly in to get your puppy and fly back with them under the seat. We will meet you at the airport with everything you need.</p>
               <hr>
               <h3>Family Business</h3>
               <p class="lead text-justify">Rio and our Moms live on our small farm with us and are important members of our family. When Moms finish their career at raising puppies we retire them. It is our responsibility to find each of them a wonderful home where they will live out their lives and embark on new adventures with their new family.</p>
