--- a/html/adopt.html
+++ b/html/adopt.html
@@ -162,8 +162,9 @@
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt <i>(incl. Shipping)</i></span>
                 <span class="d-block display-4 text-dark mb-2">$2,950</span>
-                <p>We can also make arrangements to ship your puppy via air cargo</p>
-                <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
+                <!--<p>We can also make arrangements to ship your puppy via air cargo</p>-->
+                <p class="text-danger">Unfortunately we are not shipping puppies at this time</p>
+                <form method="GET" action="home.html">
                   <input type="hidden" name="cmd" value="_cart">
                   <input type="hidden" name="upload" value="1">
                   <input type="hidden" name="business" value="trailsandtailsdoodles@gmail.com">
@@ -173,7 +174,7 @@
                   <input type="hidden" name="amount_1" value="300.00">
                   <input type="hidden" name="item_name_2" value="3% Convenience Fee">
                   <input type="hidden" name="amount_2" value="9.00">
-                  <button type="submit" class="btn btn-primary">Make a Deposit</button>
+                  <button type="submit" class="btn btn-secondary">Make a Deposit</button>
                 </form>
               </div>
             </div>
@@ -253,10 +254,10 @@
               <h3>Puppy Selection</h3>
                 <p class="lead text-justify">When the puppies are born, all families who have placed a deposit on that litter will be notified via email. A group photo will be posted on our website about a week after the puppies are born. We will post individual photos and videos of each puppy when the puppies are about 5-6 weeks, to help with your selection. At 6 weeks, when the puppies' coats and personalities are beginning to emerge, the puppy selection takes place. Each family will have a 30 minute phone call scheduled in order of deposit to make your selection. Of course we are always available to answer questions throughout the process.</p>
               <hr>
-              <h3>Puppy Pickup or Shipping</h3>
+              <h3>Puppy Pickup</h3>
                 <p class="lead text-justify">Pickup is scheduled the Saturday following your puppy turning 7 weeks old.</p>
                 <p class="lead text-justify">If you do not live within driving distance, we prefer that you fly in and fly your puppy back with you under the seat. We will meet you at the airport with everything you need, including a puppy crate and a health certificate from our veterinarian. Our price for this service is $300.</p>
-                <p class="lead text-justify">We can also make arrangements to ship your puppy via air cargo. The charge for this service is $450 and includes the crate, veterinarian health certificate, and the airfare.</p>
+                <!--<p class="lead text-justify">We can also make arrangements to ship your puppy via air cargo. The charge for this service is $450 and includes the crate, veterinarian health certificate, and the airfare.</p>-->
               <hr>
               <h3>2-Year Health Guarantee</h3>
                 <p class="lead text-justify">We are proud of our solid reputation for healthy, happy puppies. We are so confident in the lineage of our puppies that we offer a Two-Year Genetic Health Guarantee. If your puppy is found to have life-threatening, crippling, and/or disabling congenital (genetic) health defects, we'll replace your puppy free of charge. No puppy is ever sold before the puppy is cleared by a veterinarian.</p>
