--- a/html/faq.html
+++ b/html/faq.html
@@ -119,7 +119,7 @@
                 <p class="lead text-justify"><b>You have to be a responsible owner</b> and not allow your dog to run free and mate with another dog. A female dog can have a partial spaying, which your vet would know how to perform, this allows her to continue to have her hormones to help her stay healthy for the rest of her life. YOU WILL HAVE TO ASK FOR THIS PROCEDURE.</p>
               <hr>
               <h3>What kind of doodles do you breed?</h3>
-                <p class="lead text-justify">We produce both F1 and F1B Goldendoodles. An F1 is 50% Golden Retriever and 50% Moyen Poodle. We produce F1B’s by taking a F1 doodle, usually a female dog, and mating her with an unrelated Poodle, this mating produces the F1B’s which are about 75% Poodle and 25% Retriever. Our doodles are all mini doodles since I usually breed my females with a smaller male, this being Rio, my red Moyen Poodle stud. I do not get into the Multi-Generational Doodles.</p>
+                <p class="lead text-justify">We produce both F1B Aussiedoodles and F1B Goldendoodles. We produce F1B’s by taking a F1 doodle and mating her with an unrelated Poodle, this mating produces the F1B’s which are about 75% Poodle. Our doodles are all mini doodles since I usually breed my females with a smaller male, this being Rio, my red Moyen Poodle stud. I do not get into the Multi-Generational Doodles.</p>
             </article>
           </div>
         </div>
