--- a/html/puppies.html
+++ b/html/puppies.html
@@ -101,7 +101,7 @@
         <div class="row no-gutters justify-content-center py-md-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3 py-md-5">
             <span class="h2 d-block">Trails &amp; Tails Doodles</span>
-            <p class="lead">We breed Goldendoodle and Aussiedoodle puppies from superior quality lines. Our puppies make great family pets due to their non-shedding coats and their friendly out-going personalities. Selection priority is based on deposit order and selections are made just prior to pick-up date.  Notifications will be sent the week before the puppies leave my home. Families traveling to my home can chose their puppies in-person and those who are having their puppies shipped can choose using Skype, Zoom, or Facetime.
+            <p class="lead">We breed Goldendoodle and Aussiedoodle puppies from superior quality lines. Our puppies make great family pets due to their non-shedding coats and their friendly out-going personalities. Selection priority is based on deposit order and selections are made just prior to pick-up date.  Notifications will be sent the week before the puppies leave my home.
             </p>
             <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
               <input type="hidden" name="cmd" value="_cart">
